--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE BAND</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <header class="nav-div">
+        <nav class="icons">
+            <ul>
+                <li>Home</li>
+                <li>Band</li>
+                <li>Tour</li>
+                <li>Contact</li>
+                <li>Extras</li>
+                <li>Media</li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="img-div">
+        <h3>Loss Angolus</h3>
+        <p>We had the best time playing at Venice Beach! </p>
+    </div>
+
+    <div class="the-band">
+        <h3>
+            THE BAND
+        </h3>
+        <p class="love">We love music</p>
+
+        <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+    </div>
+    <div class="card-div">
+        <span>
+            <p>Name</p>
+            <img src="./Images/bandmember.jpg" alt="">
+        </span>
+        <span>
+            <p>Name</p>
+            <img src="./Images/bandmember.jpg" alt="">
+        </span>
+        <span>
+            <p>Name</p>
+            <img src="./Images/bandmember.jpg" alt="">
+        </span>
+    </div>
+
+
 </body>
+
 </html>
