Working on Contact Page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         </h3>
         <p class="love">We love music</p>
 
-        <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        <p class="disc">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
             in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -57,6 +58,44 @@
         </span>
     </div>
 
+    <div class="tour-div">
+        <h3>TOUR DATES</h3>
+        <p>Remember to book your tickets!</p>
+        <ul class="tickets">
+            <li>September <span>Sold out</span></li>
+            <li>October <span>Sold out</span></li>
+            <li>November <p>3</p>
+            </li>
+        </ul>
+        <div class="cards">
+            <div class="card">
+                <img src="./Images/newyork.jpg" alt="">
+                <p class="city">New York</p>
+                <p class="date">Fri 27 Nov 2016</p>
+                <p class="para2">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <button>Buy Tickets</button>
+            </div>
+            <div class="card">
+                <img src="./Images/paris.jpg" alt="">
+                <p class="city">Paris</p>
+                <p class="date">Sat 28 Nov 2016 </p>
+                <p class="para2">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <button>Buy Tickets</button>
+            </div>
+            <div class="card">
+                <img src="./Images/sanfran.jpg" alt="">
+                <p class="city">San Francisco</p>
+                <p class="date">Sun 29 Nov 2016</p>
+                <p class="para2">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <button>Buy Tickets</button>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="contact-info">
+            <h3>CONTACT</h3>
+        </div>
+    </div>
 
 </body>
 
