Done {With CSS & Footer}

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     </div>
     <div class="card-div">
         <span>
-            <p>Name</p>
+            <p class="name">Name</p>
             <img src="./Images/bandmember.jpg" alt="">
         </span>
         <span>
-            <p>Name</p>
+            <p class="name">Name</p>
             <img src="./Images/bandmember.jpg" alt="">
         </span>
         <span>
-            <p>Name</p>
+            <p class="name">Name</p>
             <img src="./Images/bandmember.jpg" alt="">
         </span>
     </div>
@@ -92,10 +92,34 @@
         </div>
     </div>
     <div class="contact">
-        <div class="contact-info">
             <h3>CONTACT</h3>
-        </div>
+            <p>Fan? Drop a note!</p>
+
+            <div class="details">
+                <div class="company-details">
+                    <ul class="adress">
+                        <li>
+                            Chicago, US
+                        </li>
+                        <li> Phone: +00 151515</li>
+                        <li> Email: mail@mail.com</li>
+                    </ul>
+                </div>
+                <div class="form">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
+                    <input class="message" type="text" placeholder="Message">
+                    <button>Send</button>
+                </div>
+            </div>
     </div>
+    <div class="map-img">
+        
+    </div>
+    <footer class="footer">
+
+        <p>Done Alhumdulillah</p>
+    </footer>
 
 </body>
 
